--- a/SummerTask.csproj
+++ b/SummerTask.csproj
@@ -48,11 +48,14 @@
   <ItemGroup>
     <Compile Include="Document.cs" />
     <Compile Include="DocumentConverter.cs" />
+    <Compile Include="FileHelper.cs" />
     <Compile Include="IDocument.cs" />
+    <Compile Include="IDocumentParser.cs" />
     <Compile Include="InputType.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Settings.cs" />
+    <Compile Include="XmlParser.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
