--- a/SummerTask.csproj
+++ b/SummerTask.csproj
@@ -51,9 +51,13 @@
     <Compile Include="FileHelper.cs" />
     <Compile Include="IDocument.cs" />
     <Compile Include="IDocumentParser.cs" />
-    <Compile Include="InputType.cs" />
+    <Compile Include="FileType.cs" />
+    <Compile Include="ISerializer.cs" />
+    <Compile Include="ObjectSerializer.cs" />
+    <Compile Include="ParserFactory.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SerializerFactory.cs" />
     <Compile Include="Settings.cs" />
     <Compile Include="XmlParser.cs" />
   </ItemGroup>
