--- a/SummerTask.csproj
+++ b/SummerTask.csproj
@@ -46,20 +46,26 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Document.cs" />
+    <Compile Include="Document\Document.cs" />
     <Compile Include="DocumentConverter.cs" />
-    <Compile Include="FileHelper.cs" />
-    <Compile Include="IDocument.cs" />
-    <Compile Include="IDocumentParser.cs" />
+    <Compile Include="Helpers\FileHelper.cs" />
+    <Compile Include="Document\IDocument.cs" />
+    <Compile Include="Parsers\DefaultParsingStrategy.cs" />
+    <Compile Include="Parsers\IDocumentParser.cs" />
     <Compile Include="FileType.cs" />
-    <Compile Include="ISerializer.cs" />
-    <Compile Include="ObjectSerializer.cs" />
+    <Compile Include="Parsers\IParsingStrategy.cs" />
+    <Compile Include="Parsers\IParser.cs" />
+    <Compile Include="Parsers\Parser.cs" />
+    <Compile Include="Serializers\ISerializer.cs" />
+    <Compile Include="Parsers\JsonParsingStrategy.cs" />
+    <Compile Include="Serializers\JsonSerializer.cs" />
     <Compile Include="ParserFactory.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SerializerFactory.cs" />
+    <Compile Include="Serializers\XmlSerializer.cs" />
     <Compile Include="Settings.cs" />
-    <Compile Include="XmlParser.cs" />
+    <Compile Include="Parsers\XmlParsingStrategy.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -71,5 +77,6 @@
     </Content>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
