--- a/SummerTask.csproj
+++ b/SummerTask.csproj
@@ -47,16 +47,21 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Converter.cs" />
+    <Compile Include="Document.cs" />
     <Compile Include="FileReader.cs" />
     <Compile Include="FileWriter.cs" />
+    <Compile Include="Parsing\IParser.cs" />
+    <Compile Include="Parsing\JsonParser.cs" />
     <Compile Include="JsonSerializer.cs" />
+    <Compile Include="Parsing\ParserFactory.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="XmlParser.cs" />
+    <Compile Include="Parsing\XmlParser.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
