--- a/SummerTask.csproj
+++ b/SummerTask.csproj
@@ -56,14 +56,17 @@
     <Compile Include="Parsers\IParsingStrategy.cs" />
     <Compile Include="Parsers\IParser.cs" />
     <Compile Include="Parsers\Parser.cs" />
+    <Compile Include="Serializers\DefaultSerializeStrategy.cs" />
+    <Compile Include="Serializers\ISerializeStrategy.cs" />
+    <Compile Include="Serializers\Serializer.cs" />
     <Compile Include="Serializers\ISerializer.cs" />
     <Compile Include="Parsers\JsonParsingStrategy.cs" />
-    <Compile Include="Serializers\JsonSerializer.cs" />
+    <Compile Include="Serializers\JsonSerializerStrategy.cs" />
     <Compile Include="ParserFactory.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SerializerFactory.cs" />
-    <Compile Include="Serializers\XmlSerializer.cs" />
+    <Compile Include="SerializeStrategyFactory.cs" />
+    <Compile Include="Serializers\XmlSerializerStrategy.cs" />
     <Compile Include="Settings.cs" />
     <Compile Include="Parsers\XmlParsingStrategy.cs" />
   </ItemGroup>
