--- a/src/FormatConverter/FormatConverter.csproj
+++ b/src/FormatConverter/FormatConverter.csproj
@@ -50,10 +50,11 @@
     <Compile Include="FileUtils.cs" />
     <Compile Include="Parsers\IParser.cs" />
     <Compile Include="Parsers\IParsingStrategy.cs" />
-    <Compile Include="Parsers\JsonParser.cs" />
+    <Compile Include="Parsers\JsonParsingStrategy.cs" />
     <Compile Include="Parsers\NullParsingStrategy.cs" />
     <Compile Include="Parsers\Parser.cs" />
     <Compile Include="Parsers\XmlParsingStrategy.cs" />
+    <Compile Include="Parsers\ParsingStrategyFactory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
