--- a/SummerTask.csproj
+++ b/SummerTask.csproj
@@ -50,6 +50,7 @@
     <Compile Include="Document.cs" />
     <Compile Include="FileReader.cs" />
     <Compile Include="FileWriter.cs" />
+    <Compile Include="IFileReader.cs" />
     <Compile Include="Parsing\IParser.cs" />
     <Compile Include="Parsing\JsonParser.cs" />
     <Compile Include="Parsing\ParserFactory.cs" />
@@ -57,6 +58,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Parsing\XmlParser.cs" />
     <Compile Include="Writing\ISerializer.cs" />
+    <Compile Include="Writing\ISerializerFactory.cs" />
     <Compile Include="Writing\JsonSerializer.cs" />
     <Compile Include="Writing\SerializerFactory.cs" />
     <Compile Include="Writing\XmlSummerSerializer.cs" />
