--- a/SummerTask.csproj
+++ b/SummerTask.csproj
@@ -33,11 +33,20 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Castle.Core, Version=4.0.0.0, Culture=neutral, PublicKeyToken=407dd0808d44fbdc, processorArchitecture=MSIL">
+      <HintPath>packages\Castle.Core.4.4.1\lib\net45\Castle.Core.dll</HintPath>
+    </Reference>
+    <Reference Include="Castle.Windsor, Version=5.0.0.0, Culture=neutral, PublicKeyToken=407dd0808d44fbdc, processorArchitecture=MSIL">
+      <HintPath>packages\Castle.Windsor.5.1.1\lib\net45\Castle.Windsor.dll</HintPath>
+    </Reference>
     <Reference Include="Newtonsoft.Json, Version=13.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>packages\Newtonsoft.Json.13.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Runtime.Remoting" />
+    <Reference Include="System.Web" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -51,6 +60,7 @@
     <Compile Include="Helpers\FileHelper.cs" />
     <Compile Include="Document\IDocument.cs" />
     <Compile Include="Helpers\IFileHelper.cs" />
+    <Compile Include="IDocumentConverter.cs" />
     <Compile Include="ISerializeStrategyFactory.cs" />
     <Compile Include="Parsers\DefaultParsingStrategy.cs" />
     <Compile Include="FileType.cs" />
@@ -62,14 +72,15 @@
     <Compile Include="Serializers\Serializer.cs" />
     <Compile Include="Serializers\ISerializer.cs" />
     <Compile Include="Parsers\JsonParsingStrategy.cs" />
-    <Compile Include="Serializers\JsonSerializerStrategy.cs" />
+    <Compile Include="Serializers\JsonSerializeStrategy.cs" />
     <Compile Include="ParserFactory.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SerializeStrategyFactory.cs" />
-    <Compile Include="Serializers\XmlSerializerStrategy.cs" />
+    <Compile Include="Serializers\XmlSerializeStrategy.cs" />
     <Compile Include="Settings.cs" />
     <Compile Include="Parsers\XmlParsingStrategy.cs" />
+    <Compile Include="SummerTaskInstaller.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
