IOC Container Initialization

--- a/src/FormatConverter/FormatConverter.csproj
+++ b/src/FormatConverter/FormatConverter.csproj
@@ -48,6 +48,7 @@
     <Compile Include="Document.cs" />
     <Compile Include="FileConverter.cs" />
     <Compile Include="FileUtils.cs" />
+    <Compile Include="IFileConverter.cs" />
     <Compile Include="IFileUtils.cs" />
     <Compile Include="Parsers\IParser.cs" />
     <Compile Include="Parsers\IParsingStrategy.cs" />
