--- a/SummerTask.Tests/SummerTask.Tests.csproj
+++ b/SummerTask.Tests/SummerTask.Tests.csproj
@@ -37,7 +37,7 @@
       <HintPath>..\SummerTask\packages\Castle.Core.4.4.0\lib\net45\Castle.Core.dll</HintPath>
     </Reference>
     <Reference Include="Moq, Version=4.16.0.0, Culture=neutral, PublicKeyToken=69f491c39445e920, processorArchitecture=MSIL">
-      <HintPath>..\SummerTask\packages\Moq.4.16.1\lib\net45\Moq.dll</HintPath>
+      <HintPath>..\packages\Moq.4.16.1\lib\net45\Moq.dll</HintPath>
     </Reference>
     <Reference Include="nunit.framework, Version=3.13.2.0, Culture=neutral, PublicKeyToken=2638cd05610744eb, processorArchitecture=MSIL">
       <HintPath>..\packages\NUnit.3.13.2\lib\net45\nunit.framework.dll</HintPath>
