--- a/SummerTask.csproj
+++ b/SummerTask.csproj
@@ -61,13 +61,15 @@
     <Compile Include="Document\IDocument.cs" />
     <Compile Include="Helpers\IFileHelper.cs" />
     <Compile Include="IDocumentConverter.cs" />
-    <Compile Include="ISerializeStrategyFactory.cs" />
+    <Compile Include="Serializers\ISerializeStrategyFactory.cs" />
     <Compile Include="Parsers\DefaultParsingStrategy.cs" />
     <Compile Include="FileType.cs" />
+    <Compile Include="Parsers\HtmlParsingStrategy.cs" />
     <Compile Include="Parsers\IParsingStrategy.cs" />
     <Compile Include="Parsers\IParser.cs" />
     <Compile Include="Parsers\Parser.cs" />
     <Compile Include="Serializers\DefaultSerializeStrategy.cs" />
+    <Compile Include="Serializers\HtmlSerializerStrategy.cs" />
     <Compile Include="Serializers\ISerializeStrategy.cs" />
     <Compile Include="Serializers\Serializer.cs" />
     <Compile Include="Serializers\ISerializer.cs" />
@@ -76,7 +78,7 @@
     <Compile Include="ParserFactory.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SerializeStrategyFactory.cs" />
+    <Compile Include="Serializers\SerializeStrategyFactory.cs" />
     <Compile Include="Serializers\XmlSerializeStrategy.cs" />
     <Compile Include="Settings.cs" />
     <Compile Include="Parsers\XmlParsingStrategy.cs" />
