--- a/src/FormatConverter/FormatConverter.csproj
+++ b/src/FormatConverter/FormatConverter.csproj
@@ -53,6 +53,7 @@
     <Compile Include="Parsers\IParser.cs" />
     <Compile Include="Parsers\IParsingStrategy.cs" />
     <Compile Include="Parsers\IParsingStrategyFactory.cs" />
+    <Compile Include="Parsers\HtmlParsingStrategy.cs" />
     <Compile Include="Parsers\JsonParsingStrategy.cs" />
     <Compile Include="Parsers\NullParsingStrategy.cs" />
     <Compile Include="Parsers\Parser.cs" />
